tsa2MorganRodgers.ipynb

--- a/tsa2MorganRodgers.ipynb
+++ b/tsa2MorganRodgers.ipynb
@@ -1570,7 +1570,7 @@
     "   \n",
     "\n",
     "# Has the total close amount increased or decreased over time? \n",
-    "It has not changed"
+    "It has decreased over time"
    ]
   },
   {
